# francesinha-bot

./: Cargo.toml  README
src/: main.rs
