[package]
name = "francesinha-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.7"
select = "0.5.0"
tokio = { version = "1.13", features = ["macros", "rt-multi-thread"] }
serenity = { default_features = false, features = ["cache", "client", "gateway", "model", "rustls_backend", "unstable_discord_api"], version = "0.10.9-rc.2"}